fix iframe trapping click events on firefox for android

--- a/src/assets/stylesheets/profile.scss
+++ b/src/assets/stylesheets/profile.scss
@@ -44,7 +44,6 @@
     min-height: 200px;
     max-height: 1000px;
     height: 90%;
-    overflow-y: auto;
 
     &__links {
       display: flex;
